--- a/index.html
+++ b/index.html
@@ -5,22 +5,54 @@
     <title>Daniel Champagne</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Commissioner&display=swap" rel="stylesheet">
   </head>
   <body>
 
   <div class="top">
-
-    <h1>I'm Daniel.</h1>
-    <p>A Software Engineer</p>
-
+    <img class="topcloud "src="images/cloud.png" alt="cloud-img">
+    <h1 class="opening">I'm Daniel.</h1>
+    <h2 class="subtitle">A Software Engineer</h2>
+    <img class="bottomcloud" src="images/cloud.png" alt="cloud-img">
+    <img class="pathlogo" src="images/pathlogo.png" alt="crownImg" width="325px" height="325px">
   </div>
 
-  <div class="middle">
-
+  <div class="middle-container">
+    <div class="profile">
+      <img src="images/circle-cropped.png" alt="profile-img" height="200px" width="200px">
+      <h2>Hello.</h2>
+      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="coding" src="images/codeImage.svg" alt="codeImg" width="200px" height="200px">
+        <h3>Lorem & Ipsum</h3>
+        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      </div>
+      <div class="skill-row">
+        <img class="weightlifting" src="images/weightlift.gif" alt="weightImg" width="250px" height="250px">
+        <h3>Lorem Ipsum Dolor</h3>
+        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="btn" href="mailto:danielchampagne@outlook.com">CONTACT ME</a>
+    </div>
   </div>
 
-<div class="bottom">
 
-</div>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://github.com/dchampagne1995">Github</a>
+    <a class="footer-link" href="https://www.facebook.com/daniel.champagne.12720/">Facebook</a>
+    <a class="footer-link" href=""></a>
+    <p>© 2020 Daniel Champagne.</p>
+  </div>
   </body>
 </html>
