--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Daniel Champagne</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="images/pathfavicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Commissioner&display=swap" rel="stylesheet">
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Daniel Champagne</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="images/pathfavicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Commissioner&display=swap" rel="stylesheet">
+</head>
+
+<body>
 
   <div class="top">
-    <img class="topcloud "src="images/cloud.png" alt="cloud-img">
+    <img class="topcloud " src="images/cloud.png" alt="cloud-img">
     <h1 class="opening">I'm Daniel.</h1>
     <h2 class="subtitle">A Software Engineer</h2>
     <img class="bottomcloud" src="images/cloud.png" alt="cloud-img">
@@ -22,37 +24,39 @@
     <div class="profile">
       <img src="images/circle-cropped.png" alt="profile-img" height="200px" width="200px">
       <h2>Hello.</h2>
-      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      <p>I am a software engineer with knowledge in many programming languages and computing technology.<br> I am always looking for new challenges and learning opportunities.</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="coding" src="images/codeImage.svg" alt="codeImg" width="200px" height="200px">
-        <h3>Lorem & Ipsum</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <h3>Software and Development</h3>
+        <p>Creating and designing software has always been a passion of mine. I enjoy creating nice looking pages and applications as well. </p>
       </div>
       <div class="skill-row">
         <img class="weightlifting" src="images/weightlift.gif" alt="weightImg">
-        <h3>Lorem Ipsum Dolor</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <h3 class="liftingtitle">Weightlifting and Exercising</h3>
+        <p>Weightlifting, exercising and living a healthy lifestyle has always been a priority and great hobby for me. I started when I was 14 years old.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <h3>I would love to hear from you</h3>
+      <p>Feel free to contact me if you have any inquiries</p>
       <a class="btn" href="mailto:danielchampagne@outlook.com">CONTACT ME</a>
     </div>
   </div>
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://github.com/dchampagne1995">Github</a>
-    <a class="footer-link" href="https://www.facebook.com/daniel.champagne.12720/">Facebook</a>
+    <a class="footer-link" href="https://github.com/dchampagne1995"><img border="0" alt="github-img" src="images/githlogo.png" width="42" height="42">
+</a>
+    <a class="footer-link" href="https://www.facebook.com/daniel.champagne.12720/"><img border="0" alt="github-img" src="images/FacebookPNG.png" width="40" height="40"></a>
     <a class="footer-link" href=""></a>
-    <p>© 2020 Daniel Champagne.</p>
+    <p class="copyright">© 2020 Daniel Champagne.</p>
   </div>
-  </body>
+</body>
+
 </html>
