--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="profile">
       <img src="images/circle-cropped.png" alt="profile-img" height="200px" width="200px">
       <h2>Hello.</h2>
-      <p>I am a software engineer with knowledge in many programming languages and computing technology.<br> I am always looking for new challenges and learning opportunities.</p>
+      <p class="intro">I am a software engineer with knowledge in many programming languages and computing technology.<br> I am always looking for new challenges and learning opportunities.</p>
     </div>
     <hr>
     <div class="skills">
@@ -44,7 +44,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>I would love to hear from you</h3>
-      <p>Feel free to contact me if you have any inquiries</p>
+
       <a class="btn" href="mailto:danielchampagne@outlook.com">CONTACT ME</a>
     </div>
   </div>
